--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .container-fluid {
-  background: url(./Imagenes/bici.jpg) ;
-  background-attachment: fixed;
-  background-size: 100%;
-  height: 100%;
-  margin: 0;
-  width: 100%;
+  background: url(./Imagenes/bici.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   
 }
