--- a/src/Component/Navigation/Navigation.css
+++ b/src/Component/Navigation/Navigation.css
@@ -30,6 +30,10 @@ li a {
     li a {
         padding: 5px;
     }
+
+    li {
+        text-align: center;
+    }
 }
 
 @media screen and (min-width:720px) and (max-width: 1024px){
